# wingpanel-indicator-emoji-picker

./: README.md  io.github.ellie-commons.wingpanel-indicator-emoji-picker_1.1.0_amd64.deb  io.github.ellie-commons.wingpanel-indicator-emoji-picker_1.2.0_amd64.deb  meson.build
data/: emoji-picker.gresource.xml  emoji-picker.metainfo.xml.in  gschema.xml  meson.build
debian/: changelog  control  copyright
src/: Indicator.vala
src/Objects/: Emoji.vala
src/Settings/: CustomShortcutSettings.vala
src/Widgets/: EmojiChild.vala  PopoverWidget.vala
